--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Greenfield",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "gulp styles",
+    "start:es6": "gulp start:es6"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,11 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
     "chai": "^3.5.0",
+    "connect-livereload": "^0.6.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.3.2",
-    "mocha": "^3.1.2"
+    "gulp-util": "^3.0.7",
+    "mocha": "^3.1.2",
+    "tiny-lr": "^0.2.1"
   }
 }
