--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp start",
+    "start": "gulp styles",
     "start:es6": "gulp start:es6"
   },
   "repository": {
