--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/saradelarosa/astonishingowls#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "browser-sync": "^2.17.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -31,8 +35,12 @@
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
     "mongoose": "^4.6.3",
+    "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "node-sass": "^3.10.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "request": "^2.75.0",
     "sequelize": "^3.24.3"
   },
