--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-mocks": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
-    "angular-material": "^1.1.1"
+    "angular-material": "^1.1.1",
+    "font-awesome-animation": "^0.0.9"
   }
 }
