--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "gulp styles",
     "start:es6": "gulp start:es6",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install",
+    "test": "mocha specs/**/*.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/saradelarosa/astonishingowls.git"
   },
-  "author": "Sara, Canh, John",
+  "author": "Sara, Canh, John, Navkiran, Bernard, Jake, Samantha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/saradelarosa/astonishingowls/issues"
@@ -52,7 +53,18 @@
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.3.2",
     "gulp-util": "^3.0.7",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-nyan-reporter": "^0.2.4",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-unicorn-reporter": "^0.1.4",
     "mocha": "^3.1.2",
-    "tiny-lr": "^0.2.1"
+    "phantomjs-prebuilt": "^2.1.7",
+    "tiny-lr": "^0.2.1",
+    "karma-babel-preprocessor": "^6.0.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2"
   }
 }
