--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ dist/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
+
+api-key.js
