--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-route": "^1.5.8",
     "angular-mocks": "^1.5.8",
     "font-awesome-animation": "^0.0.9",
-    "angular-chart.js": "^1.0.3"
+    "angular-chart.js": "^1.0.3",
+    "angular-ui-grid": "^3.2.9"
   }
 }
