--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-mocks": "^1.5.8",
     "font-awesome-animation": "^0.0.9",
     "angular-chart.js": "^1.0.3",
-    "angular-ui-grid": "^3.2.9"
+    "angular-ui-grid": "^3.2.9",
+    "pdfmake": "^0.1.20"
   }
 }
