--- a/bower.json
+++ b/bower.json
@@ -25,5 +25,8 @@
     "angular-chart.js": "^1.0.3",
     "angular-ui-grid": "^3.2.9",
     "pdfmake": "^0.1.20"
+  },
+  "resolutions": {
+    "angular": ">=1.2.16 1.4.x"
   }
 }
