--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "twitter": "^1.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
