--- a/package.json
+++ b/package.json
@@ -72,10 +72,12 @@
     "karma-mocha-reporter": "^2.2.0",
     "karma-nyan-reporter": "^0.2.4",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.5",
     "karma-spec-reporter": "0.0.26",
     "karma-unicorn-reporter": "^0.1.4",
     "mocha": "^3.1.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "sinon": "^1.17.6",
     "tiny-lr": "^0.2.1",
     "watchify": "^3.7.0"
   }
