--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ bower_components/
 #api-key
 server/config/api-key.js
 server/config/Currency.json
+server/config/Currency-11b02d892798.pem
 
 # dependencies
 angular-ui-grid
