--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "google-oauth-jwt": "^0.2.0",
+    "googleapis": "^14.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
